--- a/package.json
+++ b/package.json
@@ -45,7 +45,6 @@
     ]
   },
   "scripts": {
-    
     "build": "tsc && gulp build:icons",
     "dev": "tsc --watch",
     "format": "prettier nodes credentials --write",
@@ -53,7 +52,7 @@
     "lint:fix": "eslint nodes credentials --ext .ts --fix",
     "test": "jest",
     "test:coverage": "jest --coverage",
-    "prepublishOnly": "pnpm run build"
+    "prepublishOnly": "npm run build"
   },
   "files": [
     "dist"
@@ -67,7 +66,7 @@
     "eslint-plugin-n8n-nodes-base": "^1.16.1",
     "gulp": "^4.0.2",
     "jest": "^29.7.0",
-    "n8n-workflow": "^1.22.0",
+    "n8n-workflow": "*",
     "prettier": "^3.2.0",
     "ts-jest": "^29.1.0",
     "typescript": "^5.3.0"
